prevent spaces in player names
why did i allow them in the first place???

--- a/public/game.html
+++ b/public/game.html
@@ -13,7 +13,9 @@
       JavaScript is required to run this game
     </h1>
   </noscript>
-  <h1 id="title">Waiting for players</h1>
+  <div id="title">
+    <h1>Waiting for players</h1>
+  </div>
   <div id="game">
     <div id="player-list">
     </div>
