--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
   <a href="/game.html">Click here if you were already in a game and accidentally left.</a>
   <hr>
   <p>
-    Game names must be at least 4 characters long and can contain alphanumeric
-    characters (a-z, A-Z, 0-9), hyphens, and underscores (no spaces). Player
-    names are game names with spaces, and must be at least 1 character long.
+    Player names must be at least 1 character long and can contain alphanumeric
+    characters (a-z, A-Z, 0-9), hyphens, and underscores (no spaces). Game
+    names are player names that must be at least 4 characters long.
     Both are limited to 50 characters in length.
   </p>
   <hr>
