--- a/public/game.html
+++ b/public/game.html
@@ -20,6 +20,7 @@
     <div id="player-list">
     </div>
     <div id="main">
+      <canvas id="canvas"></canvas>
     </div>
     <div id="chat">
       <div id="messages">
