--- a/public/game.html
+++ b/public/game.html
@@ -30,5 +30,8 @@
       </form>
     </div>
   </div>
+  <div id="below-game">
+    <input type="button" id="start-game" value="Start Game" onclick="startGame()" disabled>
+  </div>
 </body>
 </html>
